// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`authentic-only assessment — unchanged by P5 provenance > GET /api/me/ability and GET /api/item-stats > DTK 1`] = `
{
  "difficulties": {
    "host-2025-kvant2-DTK-030": -45.179753322199915,
    "host-2025-kvant2-DTK-031": 18.391943725615857,
  },
}
`;

exports[`authentic-only assessment — unchanged by P5 provenance > GET /api/me/ability and GET /api/item-stats > ELF 1`] = `
{
  "difficulties": {
    "host-ver1-2019-verb1-ELF-033": 29.726552113698695,
    "var-2026-verb2-ELF-031": -9.276918103560014,
    "var-2026-verb2-ELF-032": 3.235214622702081,
  },
}
`;

exports[`authentic-only assessment — unchanged by P5 provenance > GET /api/me/ability and GET /api/item-stats > KVA 1`] = `
{
  "difficulties": {
    "host-2024-kvant1-KVA-013": -30.51476566080018,
    "host-2024-kvant2-KVA-014": -10.751765378909056,
  },
}
`;

exports[`authentic-only assessment — unchanged by P5 provenance > GET /api/me/ability and GET /api/item-stats > LÄS 1`] = `
{
  "difficulties": {
    "var-2026-verb1-LÄS-011": -31.996528292772503,
    "var-2026-verb1-LÄS-012": 17.004871448771254,
  },
}
`;

exports[`authentic-only assessment — unchanged by P5 provenance > GET /api/me/ability and GET /api/item-stats > MEK 1`] = `
{
  "difficulties": {
    "host-2025-verb2-MEK-021": -15.007682895772565,
    "host-2025-verb2-MEK-022": 0.751513395049848,
  },
}
`;

exports[`authentic-only assessment — unchanged by P5 provenance > GET /api/me/ability and GET /api/item-stats > NOG 1`] = `
{
  "difficulties": {
    "var-2025-kvant2-NOG-023": -95.89061646774249,
  },
}
`;

exports[`authentic-only assessment — unchanged by P5 provenance > GET /api/me/ability and GET /api/item-stats > ORD 1`] = `
{
  "difficulties": {
    "host-2025-verb2-ORD-003": -1.4365870345693885,
    "var-2026-verb1-ORD-001": -37.05318262460776,
    "var-2026-verb1-ORD-002": 66.03182886342225,
  },
}
`;

exports[`authentic-only assessment — unchanged by P5 provenance > GET /api/me/ability and GET /api/item-stats > XYZ 1`] = `
{
  "difficulties": {
    "var-2022-1-kvant1-XYZ-002": -11.776692426077169,
    "var-2026-kvant1-XYZ-001": 65.24818585059292,
  },
}
`;

exports[`authentic-only assessment — unchanged by P5 provenance > GET /api/me/ability and GET /api/item-stats > golden_a 1`] = `
{
  "ability": {
    "DTK": {
      "ability": -8.832506294065624,
      "attempts": 7,
    },
    "ELF": {
      "ability": -65.3811030227576,
      "attempts": 9,
    },
    "KVA": {
      "ability": -17.909697905567718,
      "attempts": 8,
    },
    "LÄS": {
      "ability": 10.912013891471574,
      "attempts": 6,
    },
    "MEK": {
      "ability": -22.055032521563657,
      "attempts": 10,
    },
    "NOG": {
      "ability": 14.361980794515496,
      "attempts": 4,
    },
    "ORD": {
      "ability": -33.52143535112338,
      "attempts": 10,
    },
    "XYZ": {
      "ability": -56.607274843788844,
      "attempts": 7,
    },
  },
}
`;

exports[`authentic-only assessment — unchanged by P5 provenance > GET /api/me/ability and GET /api/item-stats > golden_b 1`] = `
{
  "ability": {
    "DTK": {
      "ability": 45.19242988591527,
      "attempts": 12,
    },
    "ELF": {
      "ability": 51.29625438991685,
      "attempts": 6,
    },
    "KVA": {
      "ability": 51.212170309641714,
      "attempts": 14,
    },
    "LÄS": {
      "ability": 34.78510152202771,
      "attempts": 14,
    },
    "MEK": {
      "ability": 8.00661011394034,
      "attempts": 3,
    },
    "NOG": {
      "ability": 81.52863567322697,
      "attempts": 8,
    },
    "ORD": {
      "ability": -23.4595476088668,
      "attempts": 11,
    },
    "XYZ": {
      "ability": 0.4429046271665307,
      "attempts": 10,
    },
  },
}
`;

exports[`authentic-only assessment — unchanged by P5 provenance > GET /api/me/stats > golden_a 1`] = `
{
  "stats": {
    "accuracy7d": 0.75,
    "attempts": {
      "thisWeek": 4,
      "today": 0,
      "total": 76,
    },
    "attemptsDaily": [
      {
        "date": "2026-07-17",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-07-18",
        "n": 2,
        "quant": 0,
        "verbal": 2,
      },
      {
        "date": "2026-07-19",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-07-20",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-07-21",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-07-22",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-07-23",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-07-24",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-07-25",
        "n": 2,
        "quant": 1,
        "verbal": 1,
      },
      {
        "date": "2026-07-26",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-07-27",
        "n": 2,
        "quant": 1,
        "verbal": 1,
      },
      {
        "date": "2026-07-28",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-07-29",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-07-30",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-07-31",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-01",
        "n": 2,
        "quant": 0,
        "verbal": 2,
      },
      {
        "date": "2026-08-02",
        "n": 3,
        "quant": 2,
        "verbal": 1,
      },
      {
        "date": "2026-08-03",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-04",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-08-05",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-06",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-08-07",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-08",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-08-09",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-08-10",
        "n": 3,
        "quant": 0,
        "verbal": 3,
      },
      {
        "date": "2026-08-11",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-12",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-08-13",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-14",
        "n": 4,
        "quant": 2,
        "verbal": 2,
      },
      {
        "date": "2026-08-15",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-16",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-08-17",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-08-18",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-08-19",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-20",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-21",
        "n": 2,
        "quant": 0,
        "verbal": 2,
      },
      {
        "date": "2026-08-22",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-08-23",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-24",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-08-25",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-08-26",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-08-27",
        "n": 2,
        "quant": 2,
        "verbal": 0,
      },
      {
        "date": "2026-08-28",
        "n": 2,
        "quant": 2,
        "verbal": 0,
      },
      {
        "date": "2026-08-29",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-30",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-31",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-09-01",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-09-02",
        "n": 2,
        "quant": 1,
        "verbal": 1,
      },
      {
        "date": "2026-09-03",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-04",
        "n": 2,
        "quant": 0,
        "verbal": 2,
      },
      {
        "date": "2026-09-05",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-06",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-07",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-08",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-09-09",
        "n": 3,
        "quant": 2,
        "verbal": 1,
      },
      {
        "date": "2026-09-10",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-11",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-12",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-13",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-09-14",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-15",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-09-16",
        "n": 2,
        "quant": 1,
        "verbal": 1,
      },
      {
        "date": "2026-09-17",
        "n": 2,
        "quant": 1,
        "verbal": 1,
      },
      {
        "date": "2026-09-18",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-19",
        "n": 2,
        "quant": 0,
        "verbal": 2,
      },
      {
        "date": "2026-09-20",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-21",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-22",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-09-23",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-24",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-25",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-26",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-09-27",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-09-28",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-09-29",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-09-30",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-10-01",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-10-02",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-10-03",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-10-04",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-10-05",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-10-06",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-10-07",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-10-08",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
    ],
    "bySection": {
      "DTK": {
        "attempts7d": 1,
        "attempts7to14d": 0,
        "attempts90d": 7,
        "attemptsToday": 0,
        "avgTimeMs": 67903,
        "correct7d": 0,
        "correct7to14d": 0,
        "correct90d": 4,
        "lastAttemptedAt": 1791204383000,
      },
      "ELF": {
        "attempts7d": 3,
        "attempts7to14d": 0,
        "attempts90d": 12,
        "attemptsToday": 0,
        "avgTimeMs": 69211,
        "correct7d": 3,
        "correct7to14d": 0,
        "correct90d": 5,
        "lastAttemptedAt": 1791308722000,
      },
      "KVA": {
        "attempts7d": 0,
        "attempts7to14d": 1,
        "attempts90d": 9,
        "attemptsToday": 0,
        "avgTimeMs": 51997,
        "correct7d": 0,
        "correct7to14d": 0,
        "correct90d": 4,
        "lastAttemptedAt": 1790457787000,
      },
      "LÄS": {
        "attempts7d": 0,
        "attempts7to14d": 1,
        "attempts90d": 10,
        "attemptsToday": 0,
        "avgTimeMs": 44663,
        "correct7d": 0,
        "correct7to14d": 0,
        "correct90d": 7,
        "lastAttemptedAt": 1790718108000,
      },
      "MEK": {
        "attempts7d": 0,
        "attempts7to14d": 1,
        "attempts90d": 10,
        "attemptsToday": 0,
        "avgTimeMs": 37845,
        "correct7d": 0,
        "correct7to14d": 0,
        "correct90d": 6,
        "lastAttemptedAt": 1790544742000,
      },
      "NOG": {
        "attempts7d": 0,
        "attempts7to14d": 1,
        "attempts90d": 4,
        "attemptsToday": 0,
        "avgTimeMs": 108072,
        "correct7d": 0,
        "correct7to14d": 1,
        "correct90d": 4,
        "lastAttemptedAt": 1790584105000,
      },
      "ORD": {
        "attempts7d": 0,
        "attempts7to14d": 0,
        "attempts90d": 10,
        "attemptsToday": 0,
        "avgTimeMs": 61149,
        "correct7d": 0,
        "correct7to14d": 0,
        "correct90d": 5,
        "lastAttemptedAt": 1789838650000,
      },
      "XYZ": {
        "attempts7d": 0,
        "attempts7to14d": 0,
        "attempts90d": 9,
        "attemptsToday": 0,
        "avgTimeMs": 59821,
        "correct7d": 0,
        "correct7to14d": 0,
        "correct90d": 3,
        "lastAttemptedAt": 1789648303000,
      },
    },
    "drills": {
      "thisWeek": 1,
      "total": 0,
    },
    "mistakes": {
      "active": 0,
      "due": 0,
      "resolved": 0,
    },
    "streakDays": 0,
    "timeMsToday": 0,
    "weekly": [
      {
        "attempts": 5,
        "correct": 1,
        "weekStart": 1784203200000,
      },
      {
        "attempts": 6,
        "correct": 5,
        "weekStart": 1784808000000,
      },
      {
        "attempts": 7,
        "correct": 5,
        "weekStart": 1785412800000,
      },
      {
        "attempts": 6,
        "correct": 3,
        "weekStart": 1786017600000,
      },
      {
        "attempts": 7,
        "correct": 5,
        "weekStart": 1786622400000,
      },
      {
        "attempts": 7,
        "correct": 3,
        "weekStart": 1787227200000,
      },
      {
        "attempts": 7,
        "correct": 4,
        "weekStart": 1787832000000,
      },
      {
        "attempts": 6,
        "correct": 5,
        "weekStart": 1788436800000,
      },
      {
        "attempts": 5,
        "correct": 1,
        "weekStart": 1789041600000,
      },
      {
        "attempts": 4,
        "correct": 1,
        "weekStart": 1789646400000,
      },
      {
        "attempts": 4,
        "correct": 1,
        "weekStart": 1790251200000,
      },
      {
        "attempts": 4,
        "correct": 3,
        "weekStart": 1790856000000,
      },
    ],
  },
}
`;

exports[`authentic-only assessment — unchanged by P5 provenance > GET /api/me/stats > golden_b 1`] = `
{
  "stats": {
    "accuracy7d": 0.75,
    "attempts": {
      "thisWeek": 4,
      "today": 0,
      "total": 84,
    },
    "attemptsDaily": [
      {
        "date": "2026-07-17",
        "n": 2,
        "quant": 1,
        "verbal": 1,
      },
      {
        "date": "2026-07-18",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-07-19",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-07-20",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-07-21",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-07-22",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-07-23",
        "n": 2,
        "quant": 2,
        "verbal": 0,
      },
      {
        "date": "2026-07-24",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-07-25",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-07-26",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-07-27",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-07-28",
        "n": 2,
        "quant": 1,
        "verbal": 1,
      },
      {
        "date": "2026-07-29",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-07-30",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-07-31",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-08-01",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-08-02",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-08-03",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-04",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-08-05",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-08-06",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-08-07",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-08",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-09",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-10",
        "n": 2,
        "quant": 2,
        "verbal": 0,
      },
      {
        "date": "2026-08-11",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-08-12",
        "n": 3,
        "quant": 3,
        "verbal": 0,
      },
      {
        "date": "2026-08-13",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-08-14",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-15",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-16",
        "n": 2,
        "quant": 2,
        "verbal": 0,
      },
      {
        "date": "2026-08-17",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-18",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-19",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-20",
        "n": 2,
        "quant": 2,
        "verbal": 0,
      },
      {
        "date": "2026-08-21",
        "n": 2,
        "quant": 0,
        "verbal": 2,
      },
      {
        "date": "2026-08-22",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-23",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-24",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-08-25",
        "n": 3,
        "quant": 2,
        "verbal": 1,
      },
      {
        "date": "2026-08-26",
        "n": 2,
        "quant": 0,
        "verbal": 2,
      },
      {
        "date": "2026-08-27",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-08-28",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-29",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-08-30",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-08-31",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-09-01",
        "n": 2,
        "quant": 0,
        "verbal": 2,
      },
      {
        "date": "2026-09-02",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-03",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-04",
        "n": 3,
        "quant": 1,
        "verbal": 2,
      },
      {
        "date": "2026-09-05",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-06",
        "n": 2,
        "quant": 0,
        "verbal": 2,
      },
      {
        "date": "2026-09-07",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-08",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-09",
        "n": 2,
        "quant": 2,
        "verbal": 0,
      },
      {
        "date": "2026-09-10",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-09-11",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-09-12",
        "n": 3,
        "quant": 1,
        "verbal": 2,
      },
      {
        "date": "2026-09-13",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-09-14",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-15",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-09-16",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-09-17",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-18",
        "n": 3,
        "quant": 1,
        "verbal": 2,
      },
      {
        "date": "2026-09-19",
        "n": 2,
        "quant": 1,
        "verbal": 1,
      },
      {
        "date": "2026-09-20",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-09-21",
        "n": 1,
        "quant": 0,
        "verbal": 1,
      },
      {
        "date": "2026-09-22",
        "n": 2,
        "quant": 0,
        "verbal": 2,
      },
      {
        "date": "2026-09-23",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-24",
        "n": 2,
        "quant": 1,
        "verbal": 1,
      },
      {
        "date": "2026-09-25",
        "n": 3,
        "quant": 2,
        "verbal": 1,
      },
      {
        "date": "2026-09-26",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-27",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-28",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-09-29",
        "n": 2,
        "quant": 1,
        "verbal": 1,
      },
      {
        "date": "2026-09-30",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-10-01",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-10-02",
        "n": 2,
        "quant": 2,
        "verbal": 0,
      },
      {
        "date": "2026-10-03",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-10-04",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-10-05",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-10-06",
        "n": 1,
        "quant": 1,
        "verbal": 0,
      },
      {
        "date": "2026-10-07",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
      {
        "date": "2026-10-08",
        "n": 0,
        "quant": 0,
        "verbal": 0,
      },
    ],
    "bySection": {
      "DTK": {
        "attempts7d": 0,
        "attempts7to14d": 0,
        "attempts90d": 10,
        "attemptsToday": 0,
        "avgTimeMs": 52061,
        "correct7d": 0,
        "correct7to14d": 0,
        "correct90d": 8,
        "lastAttemptedAt": 1789821366000,
      },
      "ELF": {
        "attempts7d": 0,
        "attempts7to14d": 2,
        "attempts90d": 7,
        "attemptsToday": 0,
        "avgTimeMs": 88454,
        "correct7d": 0,
        "correct7to14d": 2,
        "correct90d": 6,
        "lastAttemptedAt": 1790650379000,
      },
      "KVA": {
        "attempts7d": 2,
        "attempts7to14d": 2,
        "attempts90d": 15,
        "attemptsToday": 0,
        "avgTimeMs": 61973,
        "correct7d": 2,
        "correct7to14d": 1,
        "correct90d": 12,
        "lastAttemptedAt": 1790937471000,
      },
      "LÄS": {
        "attempts7d": 0,
        "attempts7to14d": 1,
        "attempts90d": 13,
        "attemptsToday": 0,
        "avgTimeMs": 58651,
        "correct7d": 0,
        "correct7to14d": 1,
        "correct90d": 9,
        "lastAttemptedAt": 1790253786000,
      },
      "MEK": {
        "attempts7d": 0,
        "attempts7to14d": 0,
        "attempts90d": 3,
        "attemptsToday": 0,
        "avgTimeMs": 85090,
        "correct7d": 0,
        "correct7to14d": 0,
        "correct90d": 2,
        "lastAttemptedAt": 1788271485000,
      },
      "NOG": {
        "attempts7d": 0,
        "attempts7to14d": 1,
        "attempts90d": 8,
        "attemptsToday": 0,
        "avgTimeMs": 66531,
        "correct7d": 0,
        "correct7to14d": 1,
        "correct90d": 8,
        "lastAttemptedAt": 1790319058000,
      },
      "ORD": {
        "attempts7d": 0,
        "attempts7to14d": 0,
        "attempts90d": 11,
        "attemptsToday": 0,
        "avgTimeMs": 51548,
        "correct7d": 0,
        "correct7to14d": 0,
        "correct90d": 6,
        "lastAttemptedAt": 1789956158000,
      },
      "XYZ": {
        "attempts7d": 2,
        "attempts7to14d": 1,
        "attempts90d": 10,
        "attemptsToday": 0,
        "avgTimeMs": 47833,
        "correct7d": 1,
        "correct7to14d": 0,
        "correct90d": 5,
        "lastAttemptedAt": 1791265067000,
      },
    },
    "drills": {
      "thisWeek": 1,
      "total": 0,
    },
    "mistakes": {
      "active": 0,
      "due": 0,
      "resolved": 0,
    },
    "streakDays": 0,
    "timeMsToday": 0,
    "weekly": [
      {
        "attempts": 6,
        "correct": 5,
        "weekStart": 1784203200000,
      },
      {
        "attempts": 4,
        "correct": 3,
        "weekStart": 1784808000000,
      },
      {
        "attempts": 6,
        "correct": 4,
        "weekStart": 1785412800000,
      },
      {
        "attempts": 7,
        "correct": 5,
        "weekStart": 1786017600000,
      },
      {
        "attempts": 3,
        "correct": 1,
        "weekStart": 1786622400000,
      },
      {
        "attempts": 10,
        "correct": 6,
        "weekStart": 1787227200000,
      },
      {
        "attempts": 4,
        "correct": 3,
        "weekStart": 1787832000000,
      },
      {
        "attempts": 7,
        "correct": 6,
        "weekStart": 1788436800000,
      },
      {
        "attempts": 8,
        "correct": 7,
        "weekStart": 1789041600000,
      },
      {
        "attempts": 9,
        "correct": 7,
        "weekStart": 1789646400000,
      },
      {
        "attempts": 7,
        "correct": 5,
        "weekStart": 1790251200000,
      },
      {
        "attempts": 4,
        "correct": 3,
        "weekStart": 1790856000000,
      },
    ],
  },
}
`;

exports[`authentic-only assessment — unchanged by P5 provenance > the item_stats and user_ability rating tables 1`] = `
{
  "abilities": [
    {
      "ability": -8.832506294065624,
      "attempts": 7,
      "section": "DTK",
      "userId": 1,
    },
    {
      "ability": -65.3811030227576,
      "attempts": 9,
      "section": "ELF",
      "userId": 1,
    },
    {
      "ability": -17.909697905567718,
      "attempts": 8,
      "section": "KVA",
      "userId": 1,
    },
    {
      "ability": 10.912013891471574,
      "attempts": 6,
      "section": "LÄS",
      "userId": 1,
    },
    {
      "ability": -22.055032521563657,
      "attempts": 10,
      "section": "MEK",
      "userId": 1,
    },
    {
      "ability": 14.361980794515496,
      "attempts": 4,
      "section": "NOG",
      "userId": 1,
    },
    {
      "ability": -33.52143535112338,
      "attempts": 10,
      "section": "ORD",
      "userId": 1,
    },
    {
      "ability": -56.607274843788844,
      "attempts": 7,
      "section": "XYZ",
      "userId": 1,
    },
    {
      "ability": 45.19242988591527,
      "attempts": 12,
      "section": "DTK",
      "userId": 2,
    },
    {
      "ability": 51.29625438991685,
      "attempts": 6,
      "section": "ELF",
      "userId": 2,
    },
    {
      "ability": 51.212170309641714,
      "attempts": 14,
      "section": "KVA",
      "userId": 2,
    },
    {
      "ability": 34.78510152202771,
      "attempts": 14,
      "section": "LÄS",
      "userId": 2,
    },
    {
      "ability": 8.00661011394034,
      "attempts": 3,
      "section": "MEK",
      "userId": 2,
    },
    {
      "ability": 81.52863567322697,
      "attempts": 8,
      "section": "NOG",
      "userId": 2,
    },
    {
      "ability": -23.4595476088668,
      "attempts": 11,
      "section": "ORD",
      "userId": 2,
    },
    {
      "ability": 0.4429046271665307,
      "attempts": 10,
      "section": "XYZ",
      "userId": 2,
    },
  ],
  "items": [
    {
      "attempts": 14,
      "difficulty": -30.51476566080018,
      "questionId": "host-2024-kvant1-KVA-013",
    },
    {
      "attempts": 8,
      "difficulty": -10.751765378909056,
      "questionId": "host-2024-kvant2-KVA-014",
    },
    {
      "attempts": 12,
      "difficulty": -45.179753322199915,
      "questionId": "host-2025-kvant2-DTK-030",
    },
    {
      "attempts": 7,
      "difficulty": 18.391943725615857,
      "questionId": "host-2025-kvant2-DTK-031",
    },
    {
      "attempts": 8,
      "difficulty": -15.007682895772565,
      "questionId": "host-2025-verb2-MEK-021",
    },
    {
      "attempts": 5,
      "difficulty": 0.751513395049848,
      "questionId": "host-2025-verb2-MEK-022",
    },
    {
      "attempts": 4,
      "difficulty": -1.4365870345693885,
      "questionId": "host-2025-verb2-ORD-003",
    },
    {
      "attempts": 9,
      "difficulty": 29.726552113698695,
      "questionId": "host-ver1-2019-verb1-ELF-033",
    },
    {
      "attempts": 7,
      "difficulty": -11.776692426077169,
      "questionId": "var-2022-1-kvant1-XYZ-002",
    },
    {
      "attempts": 6,
      "difficulty": -4.164211249093878,
      "questionId": "var-2024-verb1-LAS-013",
    },
    {
      "attempts": 12,
      "difficulty": -95.89061646774249,
      "questionId": "var-2025-kvant2-NOG-023",
    },
    {
      "attempts": 10,
      "difficulty": 65.24818585059292,
      "questionId": "var-2026-kvant1-XYZ-001",
    },
    {
      "attempts": 4,
      "difficulty": -31.996528292772503,
      "questionId": "var-2026-verb1-LÄS-011",
    },
    {
      "attempts": 10,
      "difficulty": 17.004871448771254,
      "questionId": "var-2026-verb1-LÄS-012",
    },
    {
      "attempts": 11,
      "difficulty": -37.05318262460776,
      "questionId": "var-2026-verb1-ORD-001",
    },
    {
      "attempts": 6,
      "difficulty": 66.03182886342225,
      "questionId": "var-2026-verb1-ORD-002",
    },
    {
      "attempts": 4,
      "difficulty": -9.276918103560014,
      "questionId": "var-2026-verb2-ELF-031",
    },
    {
      "attempts": 2,
      "difficulty": 3.235214622702081,
      "questionId": "var-2026-verb2-ELF-032",
    },
  ],
}
`;
